Fix the scroll and zoom

BUG=602760

In a previous code change, the scroll and zoom parameters were placed out
of their place. Unfortunately this caused the coordinates to be be wrong
when scroll and zoom is done. This CL fixes it.

Writing an integration test seemed more complicated then it is. The most
suitable test location to confirm the parameters is
onProvideVirtualStructure() method right before creating the Android
ViewStructure. However, this structure does not seem to be mockable.

I will look for a better testing (or perhaps refactoring the code)
in a next CL. But this CL needs to be mergeable to 51 so not doing it
here.

Review URL: https://codereview.chromium.org/1882283002

Cr-Commit-Position: refs/heads/master@{#386875}

Former-commit-id: 93c4e8bb9c0418a3822d30428cd6c2d59eff0a40